[F] Push layer data when app saves
This commit also adds logic to refresh the shape data from the backend
when the viewer reaches the end of a cycle.

--- a/public/styles.css
+++ b/public/styles.css
@@ -5,6 +5,18 @@
   Plain CSS, because there isn't much here.
 */
 
+/*
+  Fonts!
+
+  // Copy font
+  // -----
+  font-family: 'Roboto', sans-serif;
+
+  // Headline font
+  // -----
+  font-family: 'Megrim', cursive;
+*/
+
 
 /* Reset Styles */
 html, body {
