--- a/public/styles.css
+++ b/public/styles.css
@@ -19,6 +19,10 @@
 
 
 /* Reset Styles */
+html, * {
+  box-sizing: border-box;
+}
+
 html, body {
   padding: 0;
   margin: 0;
@@ -26,11 +30,117 @@ html, body {
 
 .tandy-draw, .tandy-view {
   width: 100vw;
-  height: 100vh;
+  height: calc(100vh - 68px);
+}
+
+.page-footer {
+  position: fixed;
+  display: block;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  padding: 10px 50px;
+  height: 68px;
+}
+
+.tandy-logo {
+  display: inline-block;
+  float: left;
+  margin-top: 4px;
+  width: 325px;
+  height: 100%;
+  background-image: url('tandyLogo.png');
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-blend-mode: screen;
+}
+
+.tandy-logo-stacked {
+  margin: 0 auto;
+  width: 112px;
+  height: 46px;
+  background-image: url('tandyLogoStacked.png');
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-blend-mode: screen;
+}
+
+.cic-logo {
+  display: block;
+  margin: 0 auto;
+  width: 136px;
+  height: 32px;
+  background-image: url('cicLogo.png');
+  background-size: contain;
+  background-repeat: no-repeat;
+}
+
+.close {
+  position: absolute;
+  top: 13px;
+  right: 20px;
+  color: inherit;
+  font-size: 32px;
+  text-shadow: 2px 1px rgba(136, 136, 136, 0.6);
+  transition: text-shadow 0.2s;
+}
+
+.close:hover,
+.close:focus {
+  text-decoration: none;
+  cursor: pointer;
+  text-shadow: 0px 0px rgba(136, 136, 136, 0.1);
 }
 
 .save-button {
+  float: right;
+  margin-top: 8px;
+  margin-left: 20px;
+  vertical-align: bottom;
+  font-family: 'Megrim', cursive;
+  font-size: 30px;
+  color: #ffffff;
+  background: transparent;
+  border: none;
+  -webkit-user-select: none;
+  text-shadow: 2px 1px rgba(136, 136, 136, 0.6);
+  transition: text-shadow 0.2s;
+}
+
+.save-button:active {
+  text-shadow: 0px 0px rgba(136, 136, 136, 0.1);
+}
+
+/* The Modal */
+.modal {
+  display: none;
   position: fixed;
-  bottom: 50px;
-  left: 50px;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0,0,0);
+  background-color: rgba(0,0,0,0.4);
+}
+
+.modal-content {
+  position: relative;
+  margin: 15% auto;
+  padding: 20px;
+  width: 80%;
+  color: #ffffff;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 600;
+}
+
+.modal-content p {
+  margin: 20px 44px 20px 16px;
+  text-indent: 30px;
+  line-height: 1.5;
+}
+
+.modal-content a {
+  color: inherit;
 }
