--- a/public/styles.css
+++ b/public/styles.css
@@ -26,11 +26,36 @@ html, * {
 html, body {
   padding: 0;
   margin: 0;
+  overflow: hidden;
 }
 
-.tandy-draw, .tandy-view {
+.tandy-draw {
   width: 100vw;
   height: calc(100vh - 68px);
+}
+
+.tandy-view {
+  width: 100vw;
+  height: 100vh;
+  background-color: #000;
+}
+
+.tandy-title {
+  position: absolute;
+  bottom: 10%;
+  width: 100%;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 700;
+  font-size: 41px;
+  line-height: 1.3;
+  text-align: center;
+  color: rgba(255, 255, 255, 0.3);
+  opacity: 1;
+  transition: opacity 0.2s ease-in;
+}
+
+.tandy-title.fade-out {
+  opacity: 0;
 }
 
 .page-footer {
